# nonebot-plugin-gpt-sovits

./: README.md  pyproject.toml
nonebot_plugin_gpt_sovits/: __init__.py  config.py  models.py  utils.py
