[project]
name = "nonebot-plugin-gpt-sovits"
version = "0.2.0"
description = "✨ NoneBot2 Plugin for GPT-SoVITS ✨"
authors = [
    {name = "zhaomaoniu", email = "2667292003@qq.com"},
]
dependencies = [
    "nonebot2>=2.3.0",
    "nonebot-plugin-alconna>=0.52.0",
    "aiohttp>=3.9.5",
    "pydub>=0.25.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
